[package]
name = "mirage_ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
mirage_core = { workspace = true }
mirage_builtin = { workspace = true }
mirage_rocjitsu = { workspace = true }
mirage_hotswap = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dialoguer = { version = "0.11", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
