[package]
name = "mirage_rocjitsu"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
mirage_core = { workspace = true }
rocjitsu_sys = { workspace = true }
inventory = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
mirage_builtin = { workspace = true }
tempfile = { workspace = true }
